# DemoParser

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  DemoReader.cpp
include/: BitBuffer.h  HalfLifeDeltas.h
include/demoanalyser/: DeltaParsers.h  DemoParser.h  DemoStructs.h  EventHandlers.h
src/: DemoParser.cpp
